deploy: 0d8d0539a73922ba9a98db23c5f92ef0b0561845

--- a/begrippen.html
+++ b/begrippen.html
@@ -54,7 +54,7 @@
 <dd><p>Onderdeel van de activiteiten modus waarin alle geïnstalleerde programma’s worden getoond. U komt in deze modus door <code>SUPER+A</code> in te drukken.</p>
 </dd>
 <dt>Bestandsbeheerder</dt>
-<dd><p>De toepassing “Betanden” <img src="img/bestanden-icon.png" /> waarwee u bestandsbeheer (openen, kopiëren, verplaatsen en verwijderen van bestanden) kunt uitvoeren. Onder Windows heet deze toepassing “Verkenner”.</p>
+<dd><p>De toepassing “Bestanden” <img src="img/bestanden-icon.png" width="40" /> waarwee u bestandsbeheer (openen, kopiëren, verplaatsen en verwijderen van bestanden) kunt uitvoeren. Onder Windows heet deze toepassing “Verkenner”.</p>
 </dd>
 <dt>Besturingssysteem</dt>
 <dd><p>Verzameling programma’s die de hardware aanstuurt en zorgt dat toepassingen kunnen draaien.</p>
