--- a/oefeningen.html
+++ b/oefeningen.html
@@ -929,7 +929,7 @@
 </ul></li>
 <li><p>Maximaliseren en herstellen van de bestandsbeheerder</p>
 <ul>
-<li><p>Open LibreOffice writer met <code>SUPER+E</code></p></li>
+<li><p>Open de bestandsbeheerder met <code>SUPER+E</code></p></li>
 <li><p>Maximaliseer het venster met <code>SUPER+↑</code></p></li>
 <li><p>Herstel het venster met <code>SUPER+↓</code></p></li>
 <li><p>Maximaliseer het venster nu door op een vrij stuk in de titelbalk dubbel te klikken</p></li>
@@ -961,9 +961,9 @@
 <li><p>Open writer met <code>SUPER+3</code></p></li>
 <li><p>Indien nodig herstel het venster met <code>SUPER+↓</code></p></li>
 <li><p>Ga naar verplaats modus met <code>ALT+F7</code></p></li>
-<li><p>Beweeg het venster naar de rechter benedenhoek van het scherm en klik eenmaal met de muis</p></li>
+<li><p>Beweeg het venster naar de rechter benedenhoek van het scherm door de muis in die richting te bewegen en klik eenmaal met de muis</p></li>
 <li><p>Ga naar verplaats modus met <code>ALT+F7</code></p></li>
-<li><p>Beweeg het venster naar de linker bovenhoek van het scherm en druk <code>ESC</code>. Wat gebeurde er? Waarom gebeurde dit?</p></li>
+<li><p>Beweeg het venster naar de linker bovenhoek van het scherm door de muis in die richting te bewegen en druk <code>ESC</code>. Wat gebeurde er? Waarom gebeurde dit?</p></li>
 <li><p>Sluit het venster met <code>ALT+F4</code></p></li>
 </ul></li>
 <li><p>Verplaatsen van LibreOffice writer via sneltoetsen</p>
@@ -1185,7 +1185,7 @@
 <li><p>Sluit instellingen met <code>ALT+F4</code></p></li>
 </ul></li>
 <li><p>Zet de standaard stijl terug in het “Weergave” deel van de instellingen</p></li>
-<li><p>Zet schermvergrendeling in op 30 minuten onder “Schermen” van de afdeling “Privacy”</p></li>
+<li><p>Zet schermvergrendeling in op 15 minuten onder “Schermen” van de afdeling “Privacy”</p></li>
 <li><p>Zet grote letters uit via toegankelijkheidsmenu <img src="img/toegankelijkheidsmenu.png" height="25" /> in bovenbalk</p></li>
 <li><p>Stel samensteltoets in op rechter alt</p>
 <ul>
@@ -1201,15 +1201,21 @@
 <ul>
 <li><p>Esmé</p>
 <ul>
-<li>Type <code>Esm</code>, dan <code>SUPER e acute ↓ ENTER</code> en dan <code>CTRL+V</code></li>
+<li><p>Type <code>Esm</code></p></li>
+<li><p><code>SUPER e acute ↓ ENTER</code></p></li>
+<li><p><code>CTRL+V</code></p></li>
 </ul></li>
 <li><p>Daniël</p>
 <ul>
-<li>Type <code>Dani</code>, dan <code>SUPER e diaere ↓↓ ENTER</code> en dan <code>CTRL+V</code>, type tenslotte een <code>l</code></li>
+<li><p>Type <code>Dani</code></p></li>
+<li><p><code>SUPER e diaere ↓↓ ENTER</code></p></li>
+<li><p><code>CTRL+V</code></p></li>
+<li><p>Type <code>l</code></p></li>
 </ul></li>
 <li><p>€42,-</p>
 <ul>
-<li><code>SUPER euro sign ↓ ENTER</code> en type dan <code>42,-</code></li>
+<li><p><code>SUPER euro sign ↓ ENTER</code></p></li>
+<li><p><code>42,-</code></p></li>
 </ul></li>
 </ul></li>
 <li><p>Sla het document op onder de naam “zoekvak.txt” in “Documenten”</p></li>
@@ -1260,11 +1266,14 @@
 <ul>
 <li><p>Esmé</p>
 <ul>
-<li>Type <code>Esm</code>, dan <code>RECHTER_ALT ' e</code></li>
+<li><p>Type <code>Esm</code></p></li>
+<li><p><code>RECHTER_ALT ' e</code></p></li>
 </ul></li>
 <li><p>Daniël</p>
 <ul>
-<li>Type <code>Dani</code>, dan <code>RECHTER_ALT " e</code> en type tenslotte een <code>l</code></li>
+<li><p>Type <code>Dani</code></p></li>
+<li><p><code>RECHTER_ALT " e</code></p></li>
+<li><p>Type <code>l</code></p></li>
 </ul></li>
 <li><p>€42,-</p>
 <ul>
@@ -1388,6 +1397,7 @@
 <li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
 <li><p>Ga naar “Downloads”</p></li>
 <li><p>Klik rechts op “google-chrome_current_amd64.deb”</p></li>
+<li><p>Kies “Openen met…”</p></li>
 <li><p>Kies “Software-installatie”</p></li>
 <li><p>Klik op “Installeren”</p></li>
 <li><p>Sluit software met <code>ALT+F4</code></p></li>
@@ -1400,6 +1410,7 @@
 <li><p>Open de bestandsbeheerder met <code>SUPER+E</code></p></li>
 <li><p>Ga naar “Downloads”</p></li>
 <li><p>Klik rechts op “discord-0.0.XX.deb”</p></li>
+<li><p>Kies “Openen met…”</p></li>
 <li><p>Kies “Software-installatie”</p></li>
 <li><p>Klik op “Installeren”</p></li>
 <li><p>Wachtwoord van beheerder is <code>root</code></p></li>
@@ -1464,7 +1475,7 @@
 <li><p>Type <code>chromium web</code></p></li>
 <li><p>Klik “Chromium Web Browser” aan</p></li>
 <li><p>Klik op <img src="img/prullenbak.png" height="25" /></p></li>
-<li><p>Bevestig in het pop venster dat u Chromium wilt verwijderen</p></li>
+<li><p>Bevestig in het popup-venster dat u Chromium wilt verwijderen</p></li>
 <li><p>Geef het beheerders wachtwoord op. Dat is <code>root</code></p></li>
 <li><p>Sluit Software af met <code>ALT+F4</code></p></li>
 </ul></li>
@@ -1474,7 +1485,7 @@
 <li><p>Type <code>xpdf</code></p></li>
 <li><p>Klik “xpdf” aan</p></li>
 <li><p>Klik op <img src="img/prullenbak.png" height="25" /></p></li>
-<li><p>Bevestig in het pop venster dat u xpdf wilt verwijderen</p></li>
+<li><p>Bevestig in het popup-venster dat u xpdf wilt verwijderen</p></li>
 <li><p>Geef het beheerders wachtwoord op. Dat is <code>root</code></p></li>
 <li><p>Sluit Software af met <code>ALT+F4</code></p></li>
 </ul></li>
@@ -1483,8 +1494,10 @@
 <li><p>Open de bestandsbeheerder met <code>SUPER+E</code></p></li>
 <li><p>Ga naar “Downloads”</p></li>
 <li><p>Klik rechts op “discord-0.0.XX.deb”</p></li>
+<li><p>Kies “Openen met…”</p></li>
 <li><p>Kies “Software-installatie”</p></li>
 <li><p>Klik op <img src="img/prullenbak.png" height="25" /></p></li>
+<li><p>Bevestig in het popup-venster dat u discord wilt verwijderen</p></li>
 <li><p>Wachtwoord van beheerder is <code>root</code></p></li>
 <li><p>Sluit Software met <code>ALT+F4</code></p></li>
 </ul></li>
@@ -1493,8 +1506,10 @@
 <li><p>Open de bestandsbeheerder met <code>SUPER+E</code></p></li>
 <li><p>Ga naar “Downloads”</p></li>
 <li><p>Klik rechts op “google-chrome_current_amd64.deb”</p></li>
+<li><p>Kies “Openen met…”</p></li>
 <li><p>Kies “Software-installatie”</p></li>
 <li><p>Klik op <img src="img/prullenbak.png" height="25" /></p></li>
+<li><p>Bevestig in het popup-venster dat u Google Chrome wilt verwijderen</p></li>
 <li><p>Wachtwoord van beheerder is <code>root</code></p></li>
 <li><p>Sluit Software met <code>ALT+F4</code></p></li>
 </ul></li>
