--- a/oefeningen.html
+++ b/oefeningen.html
@@ -727,7 +727,7 @@
 <li><p>De hulp functie gebruiken om op bestandsgrootte te sorteren</p>
 <ul>
 <li><p>Open bestandsbeheerder met <code>SUPER+E</code></p></li>
-<li><p>Ga naar pictogram weergave</p></li>
+<li><p>Ga naar raster weergave</p></li>
 <li><p>Open de hulp functie <code>F1</code></p></li>
 <li><p>Zoek met <code>CTRL+S</code> naar <code>sorteren</code>, en ga naar “Bestanden en mappen sorteren”</p></li>
 <li><p>Volg de instructies om op bestandsgrootte te sorteren in pictogramweergave</p></li>
@@ -756,7 +756,7 @@
 <li><p>Open bestandsbeheer <code>SUPER+4</code></p></li>
 <li><p>Wissel terug naar Firefox met <code>ALT+TAB</code></p>
 <ul>
-<li>Hoe had u dit anders kunnen doen met een sneltoets?</li>
+<li>Met welke andere sneltoets had dit ook gekunt?</li>
 </ul></li>
 <li><p>Wissel nu weer naar de bestandsbeheerder met <code>ALT+TAB</code></p></li>
 <li><p>Sluit beide toepassingen met <code>ALT+F4</code></p>
