deploy: 22b6868cf160dbcc8d9b7cb57b6c732ea10e9c5b

--- a/verder-leren.html
+++ b/verder-leren.html
@@ -24,7 +24,7 @@
 <p class="author"><div class="line-block">Steven Speek<br />
  </div></p>
 </header>
-<h1 id="verder-leren">Verder leren</h1>
+<h1 id="aanbevolen-bronnen">Aanbevolen bronnen</h1>
 <p>Alle bronnen die u hier vindt zijn kosteloos.</p>
 <h2 id="desktop">Desktop</h2>
 <ol type="1">
