deploy: cf4543533248cf7974489ad24752e0418076bd91

--- a/firefox.html
+++ b/firefox.html
@@ -15,7 +15,7 @@
 <p>Belangrijke sneltoetsen</p>
 </li>
 <li>
-<p>Link openen op nieuw tabblad</p>
+<p>Koppeling openen op nieuw tabblad</p>
 </li>
 <li>
 <p>Enkele extensies</p>
@@ -68,13 +68,16 @@
 <p><img src="img/firefox-zoeken-op-wikipedia.gif" alt="" style="width:1000px;" /></p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="5" data-theme="gaia" style="--theme:gaia;">
-<h4 id="links-openen-op-nieuw-tabblad">Links openen op nieuw tabblad</h4>
+<h4 id="koppelingen-openen-op-nieuw-tabblad">Koppelingen openen op nieuw tabblad</h4>
 <ul>
 <li>
-<p>Op een link klikken met <code>CTRL+SHIFT</code> ingedrukt opent de link op een nieuw tabblad en navigeert naar dat tabblad toe</p>
+<p>Op een koppeling klikken met <code>CTRL+SHIFT</code> ingedrukt opent de koppeling op een nieuw tabblad en navigeert naar dat tabblad toe</p>
 </li>
 <li>
-<p>Op een link klikken met <code>CTRL</code> ingedrukt opent de link op een nieuw tabblad</p>
+<p>Op een koppeling klikken met <code>CTRL</code> ingedrukt opent de koppeling op een nieuw tabblad</p>
+</li>
+<li>
+<p>Context menu van de koppeling openen en &quot;Koppeling openen in nieuw tabblad&quot;</p>
 </li>
 <li>
 <p>Met <code>CTRL+TAB</code> wisselt u tussen de tabbladden. Met <code>CTRL+SHIFT+TAB</code> in tegengestelde richting.</p>
@@ -82,7 +85,7 @@
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="6" data-theme="gaia" style="--theme:gaia;">
-<h5 id="voorbeeld-link-op-een-nieuw-tabblad-openen">Voorbeeld link op een nieuw tabblad openen</h5>
+<h5 id="voorbeeld-koppeling-op-een-nieuw-tabblad-openen">Voorbeeld koppeling op een nieuw tabblad openen</h5>
 <p><img src="img/firefox-openen-op-nieuw-tabblad.gif" alt="" style="width:1000px;" /></p>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="7" data-theme="gaia" style="--theme:gaia;">
