--- a/oefeningen.html
+++ b/oefeningen.html
@@ -397,7 +397,7 @@
 <ul>
 <li><p>Ga naar de URL: <code>github.com/slspeek/linux-beginners-cursus</code>.</p></li>
 <li><p>Scroll naar het kopje “Lesmateriaal”</p></li>
-<li><p>Klik op de link van de HTML versie (tweede kolom) van “Presentaties”</p></li>
+<li><p>Klik op de koppeling van de HTML versie (tweede kolom) van “Presentaties”</p></li>
 <li><p>Blader door enkele presentaties heen, nu weet u waar u het lesmateriaal online kunt vinden</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
@@ -435,7 +435,7 @@
 <li><p>Ga met behulp van de bladwijzer naar de URL: <code>github.com/slspeek/linux-beginners-cursus</code></p></li>
 <li><p>Maak bladwijzerbalk zichtbaar met <code>CTRL+SHIFT+B</code> als deze verborgen is</p></li>
 <li><p>Scroll naar beneden naar de README naar het kopje “Lesmateriaal”</p></li>
-<li><p>Klik op de link van de HTML versie van “Presentaties” (tweede kolom)</p></li>
+<li><p>Klik op de koppeling van de HTML versie van “Presentaties” (tweede kolom)</p></li>
 <li><p>Maak een bladwijzer door op <img src="img/firefox-bladwijzer-ster-leeg.png" width="30" /> aan de rechterzijde te klikken</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
@@ -488,7 +488,7 @@
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
 <li><p>Ga naar de URL: <code>slspeek.github.io/linux-beginners-cursus/samenvatting.html</code>.</p></li>
-<li><p>Scroll omlaag naar “Internet browser: Firefox” en dan naar “Extensies installeren”, klik op de link van “I don’t care about cookies”</p></li>
+<li><p>Scroll omlaag naar “Internet browser: Firefox” en dan naar “Extensies installeren”, klik op de koppeling van “I don’t care about cookies”</p></li>
 <li><p>Klik op de knop “Toevoegen aan Firefox”</p></li>
 <li><p>Ga na met <code>CTRL+SHIFT+A</code> (Add-ons) of de extensie is geïnstalleerd</p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
@@ -1425,49 +1425,50 @@
 <li><p>Open standaardtoepassingen in Instellingen met <code>SUPER standaa ENTER</code></p></li>
 <li><p>Klik het lijstje van “Web” open en kies “Chromium”</p></li>
 <li><p>Sluit instellingen af met <code>ALT+F4</code></p></li>
-<li><p>Open de bestandsbeheerder met <code>SUPER+E</code></p></li>
-<li><p>Ga naar “Downloads”</p></li>
-<li><p>Dubbelklik op “samenvatting.pdf”</p></li>
-<li><p>Scroll naar “Bestanden” -&gt; “Bestanden op Linux”</p></li>
-<li><p>Klik op de link <em>thuismap</em></p></li>
-<li><p>Overtuig uzelf ervan dat deze link nu in Chromium wordt geopend</p></li>
-<li><p>Sluit bestandsbeheerder, Chromium en samenvatting.pdf</p></li>
+<li><p>Type <code>SUPER verder ENTER</code> om met behulp van het zoekvak “verder-leren.pdf” te openen</p></li>
+<li><p>Klik op de koppeling “GNOME online help” onder het kopje “Desktop”</p></li>
+<li><p>Overtuig uzelf ervan dat deze koppeling nu in Chromium wordt geopend</p></li>
+<li><p>Sluit bestandsbeheerder, Chromium en verder-leren.pdf</p></li>
 <li><p>Open standaardtoepassingen in Instellingen met <code>SUPER standaa ENTER</code></p></li>
 <li><p>Klik het lijstje van “Web” open en kies “Firefox”</p></li>
 <li><p>Sluit instellingen af met <code>ALT+F4</code></p></li>
-<li><p>Open de bestandsbeheerder met <code>SUPER+E</code></p></li>
-<li><p>Ga naar “Downloads”</p></li>
-<li><p>Dubbelklik op “samenvatting.pdf”</p></li>
-<li><p>Scroll naar “Bestanden” -&gt; “Bestanden op Linux”</p></li>
-<li><p>Klik op de link <em>thuismap</em></p></li>
-<li><p>Overtuig uzelf ervan dat deze link nu in Firefox wordt geopend</p></li>
-<li><p>Sluit bestandsbeheerder, Chromium en samenvatting.pdf</p></li>
+<li><p>Type <code>SUPER verder ENTER</code> om met behulp van het zoekvak “verder-leren.pdf” te openen</p></li>
+<li><p>Klik op de koppeling “GNOME online help” onder het kopje “Desktop”</p></li>
+<li><p>Overtuig uzelf ervan dat deze koppeling nu in Firefox wordt geopend</p></li>
+<li><p>Sluit bestandsbeheerder, Firefox en verder-leren.pdf</p></li>
 </ul></li>
 <li><p>xpdf als standaard voor PDF bestanden instellen</p>
 <ul>
+<li><p>Open samenvatting.pdf met behulp van het zoekvak door <code>SUPER samenva ENTER</code></p></li>
+<li><p>Overtuig uzelf ervan dat “samenvatting.pdf” is geopend met “Documentweergave” door het hamburgermenu <img src="img/firefox-hamburgermenu.png" height="20" /> te openen en het item “Over Documentweergave” te selecteren</p></li>
+<li><p>Sluit “Document weergave” met <code>ALT+F4</code></p></li>
 <li><p>Open de bestandsbeheerder met <code>SUPER+4</code></p></li>
 <li><p>Ga naar “Downloads” met de bladwijzer in het linker paneel</p></li>
-<li><p>Selecteer “samenvatting.pdf” en druk <code>ENTER</code></p></li>
-<li><p>Overtuig uzelf ervan dat “samenvatting.pdf” is geopend met “Document weergave” door het hamburgermenu <img src="img/firefox-hamburgermenu.png" height="20" /> te openen en het item “Over Document weergave” te selecteren</p></li>
-<li><p>Sluit “Document weergave” met <code>ALT+F4</code></p></li>
 <li><p>Open het contextmenu van “samenvatting.pdf” (rechtsklikken)</p></li>
 <li><p>Kies “Openen met…”</p></li>
 <li><p>Zoek xpdf op in de lijst van toepassingen</p></li>
 <li><p>Selecteer xpdf</p></li>
 <li><p>Zet de knop “Altijd gebruiken voor dit bestandstype” om zodat die blauw kleurt</p></li>
+<li><p>Klik op de blauwe knop “Openen”</p></li>
 <li><p>Nu is “samenvatting.pdf” in xpdf geopend</p></li>
 <li><p>U sluit xpdf door <code>Q</code> in te drukken</p></li>
-<li><p>Selecteer “samenvatting.pdf” en druk <code>ENTER</code></p></li>
-<li><p>U ziet dat “samenvatting.pdf” opnieuw met xpdf wordt geopend</p></li>
+<li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
+<li><p>Open samenvatting.pdf opnieuw met behulp van het zoekvak door <code>SUPER samenva ENTER</code></p></li>
+<li><p>U ziet dat “samenvatting.pdf” weer met xpdf wordt geopend</p></li>
 <li><p>U sluit xpdf door <code>Q</code> in te drukken</p></li>
+<li><p>Open de bestandsbeheerder met <code>SUPER+4</code></p></li>
+<li><p>Ga naar “Downloads” met de bladwijzer in het linker paneel</p></li>
 <li><p>Open het contextmenu van “samenvatting.pdf” (Selecteer “samenvatting.pdf” en druk <code>MENU</code>)</p></li>
 <li><p>Kies “Openen met…” <code>M</code></p></li>
-<li><p>Selecteer “Document weergave”</p></li>
+<li><p>Selecteer “Documentweergave”</p></li>
 <li><p>Zet de knop “Altijd gebruiken voor dit bestandstype” om zodat die blauw kleurt</p></li>
+<li><p>Klik op de blauwe knop “Openen”</p></li>
+<li><p>Nu is “samenvatting.pdf” in “Documentweergave” geopend</p></li>
 <li><p>Sluit “Document weergave” met <code>ALT+F4</code></p></li>
-<li><p>Selecteer “samenvatting.pdf” en druk <code>ENTER</code></p></li>
-<li><p>U ziet dat “samenvatting.pdf” opnieuw met “Document weergave” wordt geopend</p></li>
-<li><p>Sluit “samenvatting.pdf” en de bestandsbeheerder beide met <code>ALT+F4</code></p></li>
+<li><p>Sluit de bestandsbeheerder met <code>ALT+F4</code></p></li>
+<li><p>Open samenvatting.pdf opnieuw met behulp van het zoekvak door <code>SUPER samenva ENTER</code></p></li>
+<li><p>U ziet dat “samenvatting.pdf” weer met “Documentweergave” wordt geopend</p></li>
+<li><p>Sluit “samenvatting.pdf” met <code>ALT+F4</code></p></li>
 </ul></li>
 <li><p>Verwijder Chromium</p>
 <ul>
