--- a/samenvatting.html
+++ b/samenvatting.html
@@ -298,10 +298,11 @@
 <li><p>Nieuw venster <code>CTRL+N</code></p></li>
 <li><p>Afsluiten <code>CTRL+Q</code></p></li>
 </ul></li>
-<li><p>Links openen op een nieuw tabblad</p>
+<li><p>Koppelingen openen op een nieuw tabblad</p>
 <ul>
-<li><p><code>CTRL+SHIFT</code> met muisklik opent een link op een nieuw tabblad en schakelt naar het nieuw geopende tabblad</p></li>
-<li><p><code>CTRL</code> met muisklik opent een link op een nieuw tabblad</p></li>
+<li><p>Op een koppeling klikken met <code>CTRL+SHIFT</code> ingedrukt opent de koppeling op een nieuw tabblad en navigeert naar dat tabblad toe</p></li>
+<li><p>Op een koppeling klikken met <code>CTRL</code> ingedrukt opent de koppeling op een nieuw tabblad</p></li>
+<li><p>Context menu van de koppeling openen en “Koppeling openen in nieuw tabblad”</p></li>
 <li><p>Met <code>CTRL+TAB</code> wisselt u tussen de tabbladden. Met <code>CTRL+SHIFT+TAB</code> in tegengestelde richting.</p></li>
 </ul></li>
 <li><p>Plaatje openen in nieuw tabblad</p>
