deploy: 5ca5dc3b8bcc3e02647f71b32fd736fcc3372545

--- a/bestanden.html
+++ b/bestanden.html
@@ -161,6 +161,14 @@
 </ul>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="10" data-theme="gaia" style="--theme:gaia;">
+<h5 id="voorbeeld-een-afbeelding-openen">Voorbeeld een afbeelding openen</h5>
+<p><img src="img/bestanden-open-afbeelding.gif" alt="" style="width:1000px;" /></p>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="11" data-theme="gaia" style="--theme:gaia;">
+<h5 id="voorbeeld-de-begrippenlijst-openen">Voorbeeld de begrippenlijst openen</h5>
+<p><img src="img/bestanden-open-begrippen-pdf.gif" alt="" style="width:1000px;" /></p>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="12" data-theme="gaia" style="--theme:gaia;">
 <h4 id="verschillende-views">Verschillende views</h4>
 <ul>
 <li>
@@ -174,15 +182,15 @@
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="11" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="13" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-wisselen-tussen-raster--en-lijstweergave">Voorbeeld wisselen tussen raster- en lijstweergave</h5>
 <p><img src="img/bestanden-wisselen-raster-lijst.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="12" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="14" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-wel-of-geen-verborgen-bestanden-tonen">Voorbeeld wel of geen verborgen bestanden tonen</h5>
 <p><img src="img/bestanden-wel-niet-verborgen.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="13" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="15" data-theme="gaia" style="--theme:gaia;">
 <h4 id="omlaag-en-omhoog-navigeren">Omlaag en omhoog navigeren</h4>
 <ul>
 <li>
@@ -196,11 +204,11 @@
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="14" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="16" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-navigeren-in-afbeeldingen-map">Voorbeeld navigeren in Afbeeldingen map</h5>
 <p><img src="img/bestanden-omlaag-omhoog-navigeren.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="15" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="17" data-theme="gaia" style="--theme:gaia;">
 <h4 id="mappen-maken">Mappen maken</h4>
 <ul>
 <li>
@@ -214,7 +222,7 @@
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="16" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="18" data-theme="gaia" style="--theme:gaia;">
 <h4 id="bestanden-of-mappen-verplaatsen-of-kopi%C3%ABren">Bestanden of mappen verplaatsen of kopiëren</h4>
 <ul>
 <li>
@@ -241,19 +249,19 @@
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="17" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="19" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-bloemen-organiseren">Voorbeeld bloemen organiseren</h5>
 <p><img src="img/bestanden-mappen-maken-en-slepen.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="18" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="20" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-kopie-maken-van-map">Voorbeeld kopie maken van map</h5>
 <p><img src="img/bestand-kopieren-via-context-menu.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="19" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="21" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-schermopname-verplaatsen">Voorbeeld schermopname verplaatsen</h5>
 <p><img src="img/bestanden-schermopname-verplaatsen.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="20" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="22" data-theme="gaia" style="--theme:gaia;">
 <h4 id="in-de-prullenbak-gooien-en-herstellen-uit-de-prullenbak">In de prullenbak gooien en herstellen uit de prullenbak</h4>
 <ul>
 <li>
@@ -283,11 +291,11 @@
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="21" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="23" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-videos-in-de-prullenbak-gooien">Voorbeeld Video's in de prullenbak gooien</h5>
 <p><img src="img/bestanden-in-en-uit-prullenbak.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="22" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="24" data-theme="gaia" style="--theme:gaia;">
 <h4 id="prullenbak-legen">Prullenbak legen</h4>
 <ul>
 <li>
@@ -299,7 +307,7 @@
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="23" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="25" data-theme="gaia" style="--theme:gaia;">
 <h4 id="eigenschappen-van-bestanden-en-mappen">Eigenschappen van bestanden en mappen</h4>
 <ul>
 <li>
@@ -310,15 +318,15 @@
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="24" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="26" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-eigenschappen-van-een-map">Voorbeeld eigenschappen van een map</h5>
 <p><img src="img/bestanden-mapeigenschappen.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="25" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="27" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-afbeeldingseigenschappen">Voorbeeld afbeeldingseigenschappen</h5>
 <p><img src="img/bestanden-afbeeldingseigenschappen.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="26" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="28" data-theme="gaia" style="--theme:gaia;">
 <h4 id="zoeken-van-mappen-of-bestanden">Zoeken van mappen of bestanden</h4>
 <ul>
 <li>
@@ -329,7 +337,7 @@
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="27" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="29" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-zoeken-in-document">Voorbeeld zoeken in document</h5>
 <ul>
 <li>
@@ -346,11 +354,11 @@
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="28" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="30" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-zoeken-in-document-1">Voorbeeld zoeken in document</h5>
 <p><img src="img/bestanden-zoek-in-inhoud.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="29" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="31" data-theme="gaia" style="--theme:gaia;">
 <h4 id="bladwijzer-maken-van-map-of-lokatie">Bladwijzer maken van map of lokatie</h4>
 <ul>
 <li>
@@ -373,15 +381,15 @@ en &quot;Verwijderen uit bladwijzers&quot; in het popup menu te kiezen</p>
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="30" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="32" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-bladwijzer-maken-met-menuoptie">Voorbeeld bladwijzer maken met menuoptie</h5>
 <p><img src="img/bestanden-bladwijzer-via-menu.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="31" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="33" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-bladwijzer-maken-door-te-slepen">Voorbeeld bladwijzer maken door te slepen</h5>
 <p><img src="img/bestanden-bladwijzer-slepen.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="32" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="34" data-theme="gaia" style="--theme:gaia;">
 <h4 id="bestanden-inpakken-en-uitpakken">Bestanden inpakken en uitpakken</h4>
 <ul>
 <li>
@@ -405,11 +413,11 @@ en &quot;Verwijderen uit bladwijzers&quot; in het popup menu te kiezen</p>
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="33" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="35" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-archief-aanmaken">Voorbeeld archief aanmaken</h5>
 <p><img src="img/bestanden-inpakken.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="34" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="36" data-theme="gaia" style="--theme:gaia;">
 <ul>
 <li>
 <p>Archief bestand uitpakken</p>
@@ -432,25 +440,25 @@ en &quot;Verwijderen uit bladwijzers&quot; in het popup menu te kiezen</p>
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="35" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="37" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-archief-uitpakken-naar">Voorbeeld archief uitpakken naar ...</h5>
 <p><img src="img/bestanden-uitpakken-naar.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="36" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="38" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-archief-uitpakken">Voorbeeld archief uitpakken</h5>
 <p><img src="img/bestanden-uitpakken.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="37" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="39" data-theme="gaia" style="--theme:gaia;">
 <h4 id="archief-bestand-inzien">Archief bestand inzien</h4>
 <ul>
 <li>dubbelklik zip bestand</li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="38" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="40" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-inzien-archief">Voorbeeld inzien archief</h5>
 <p><img src="img/bestanden-inzien-archief.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="39" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="41" data-theme="gaia" style="--theme:gaia;">
 <h4 id="hulp-opvragen-over-de-bestandsbeheerder">Hulp opvragen over de bestandsbeheerder</h4>
 <ul>
 <li>
@@ -483,11 +491,11 @@ en &quot;Verwijderen uit bladwijzers&quot; in het popup menu te kiezen</p>
 </li>
 </ul>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="40" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="42" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-hulp-over-sorteren-opvragen">Voorbeeld hulp over sorteren opvragen</h5>
 <p><img src="img/bestanden-hulp-sorteren.gif" alt="" style="width:1000px;" /></p>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="41" data-theme="gaia" style="--theme:gaia;">
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="43" data-theme="gaia" style="--theme:gaia;">
 <h5 id="voorbeeld-sneltoetsen-voor-de-bestandsbeheerder-tonen">Voorbeeld sneltoetsen voor de bestandsbeheerder tonen</h5>
 <p><img src="img/bestanden-sneltoetsen-tonen.gif" alt="" style="width:1000px;" /></p>
 </section>
