deploy: 56d544b47717004ec1be120f8ac7afb82199dec7

--- a/rondleiding-gnome.html
+++ b/rondleiding-gnome.html
@@ -22,9 +22,8 @@
 </ol>
 </section>
 </foreignObject><foreignObject width="1280" height="720" data-marpit-advanced-background="pseudo"><section data-theme="gaia" style="" data-marpit-advanced-background="pseudo" data-marpit-advanced-background-split="right"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="2" data-theme="gaia" style="--theme:gaia;">
-<h3 id="inloggen-in-gdm">Inloggen in GDM</h3>
+<h3 id="inloggen">Inloggen</h3>
 <ul>
-<li>GDM is de <strong>display manager</strong>, die regelt de graphische logins</li>
 <li>Inloggen met <code>(gebruikersnaam='tux', wachtwoord='tux')</code></li>
 <li>GNOME desktopmanager opent in activiteiten modus</li>
 </ul>
