--- a/samenvatting.html
+++ b/samenvatting.html
@@ -146,7 +146,7 @@
 <li><p>Lange termijn ondersteuning</p></li>
 </ul>
 <h1 id="rondleiding-gnome">Rondleiding GNOME</h1>
-<h2 id="aanmelden-in-de-displaymanager">Aanmelden in de displaymanager</h2>
+<h2 id="aanmelden">Aanmelden</h2>
 <p>Met account (gebruikersnaam=<code>tux</code>, wachtwoord=<code>tux</code>)</p>
 <h2 id="schermbeveiliging">Schermbeveiliging</h2>
 <ul>
