deploy: b441b174fd795a59d4feeb8abd0595ceedeeef4d

--- a/oefeningen.html
+++ b/oefeningen.html
@@ -395,7 +395,7 @@
 <ol type="1">
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
-<li><p>Ga naar de URL: <code>github.com/slspeek/linux-beginners-cursus</code>.</p></li>
+<li><p>Ga naar de URL: <code>slspeek.github.io/linux-beginners-cursus</code>.</p></li>
 <li><p>Scroll naar het kopje “Lesmateriaal”</p></li>
 <li><p>Klik op de koppeling van de HTML versie (tweede kolom) van “Presentaties”</p></li>
 <li><p>Blader door enkele presentaties heen, nu weet u waar u het lesmateriaal online kunt vinden</p></li>
@@ -411,7 +411,7 @@
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
-<li><p>Ga naar de URL: <code>github.com/slspeek/linux-beginners-cursus</code></p></li>
+<li><p>Ga naar de URL: <code>slspeek.github.io/linux-beginners-cursus</code></p></li>
 <li><p>Scroll naar het kopje “Lesmateriaal”</p></li>
 <li><p>Open de HTML versie (tweede kolom) van Samenvatting en Oefeningen op een apart tabblad (en blijf op de eerste pagina)</p></li>
 <li><p>Gebruik <code>CTRL+TAB</code> om de twee nieuwe pagina’s te bekijken</p></li>
@@ -426,13 +426,13 @@
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
-<li><p>Ga naar de URL: <code>github.com/slspeek/linux-beginners-cursus</code></p></li>
+<li><p>Ga naar de URL: <code>slspeek.github.io/linux-beginners-cursus</code></p></li>
 <li><p>Maak een bladwijzer met <code>CTRL+D</code></p></li>
 <li><p>Sluit de browser af met <code>CTRL+Q</code></p></li>
 </ul></li>
 <li><p>Start Firefox met <code>SUPER+1</code>.</p>
 <ul>
-<li><p>Ga met behulp van de bladwijzer naar de URL: <code>github.com/slspeek/linux-beginners-cursus</code></p></li>
+<li><p>Ga met behulp van de bladwijzer naar de URL: <code>slspeek.github.io/linux-beginners-cursus</code></p></li>
 <li><p>Maak bladwijzerbalk zichtbaar met <code>CTRL+SHIFT+B</code> als deze verborgen is</p></li>
 <li><p>Scroll naar beneden naar de README naar het kopje “Lesmateriaal”</p></li>
 <li><p>Klik op de koppeling van de HTML versie van “Presentaties” (tweede kolom)</p></li>
